name:                vector-stream-utils
version:             0.0.1
synopsis:            Utils for using vector as a streaming lib.
homepage:            http://github.com/TerrorJack/vector-stream-utils
license:             BSD3
license-file:        LICENSE
author:              Shao Cheng
maintainer:          astrohavoc@gmail.com
copyright:           2016 Shao Cheng
category:            Data
build-type:          Simple
cabal-version:       >=1.24

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vector.Fusion.Stream.Monadic.Utils
  default-language:    Haskell2010
  build-depends:       base
                     , chunked-data
                     , mono-traversable
                     , mwc-random
                     , primitive
                     , vector
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/TerrorJack/vector-stream-utils
